@@ -85,6 +85,9 @@ sub gather_file_travis_yml
     name    => '.travis.yml',
     content => join("\n", q{language: perl},
                           q{},
+                          q{# remember need at least one install command, even if there are no},
+                          q{# prereqs, else travis will try to install deps using cpanm},
+                          q{# which is not what we want since this is a Dist::Zilla dist.},
                           q{install:},
                           q{  - cpanm -n Dist::Zilla},
                           q{  - dzil authordeps --missing | cpanm -n},
@@ -100,7 +103,7 @@ sub gather_file_travis_yml
                           q{#before_script: /bin/true},
                           q{},
                           q{script:},
-                          q{  - dzil test},
+                          q{  - dzil test -v},
                           q{},
                           q{#after_script: /bin/true},
                           q{},
